pkg/plugins/policies/meshratelimit/plugin/v1alpha1/testdata/basic_listener_1.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17777
enableReusePort: true
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.local_ratelimit
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          statPrefix: rate_limit
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      routeConfig:
        name: self_inbound_dp_17777
        requestHeadersToRemove:
        - x-kuma-tags
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: self_inbound_dp_17777
          routes:
          - match:
              prefix: /
            route:
              cluster: self_inbound_dp_17777
              timeout: 0s
            typedPerFilterConfig:
              envoy.filters.http.local_ratelimit:
                '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                filterEnabled:
                  defaultValue:
                    numerator: 100
                  runtimeKey: local_rate_limit_enabled
                filterEnforced:
                  defaultValue:
                    numerator: 100
                  runtimeKey: local_rate_limit_enforced
                responseHeadersToAdd:
                - header:
                    key: x-kuma-rate-limit-header
                    value: test-value
                - header:
                    key: x-kuma-rate-limit
                    value: other-value
                - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                  header:
                    key: x-kuma-rate-limit-header-set
                    value: test-value
                statPrefix: rate_limit
                status:
                  code: 444
                tokenBucket:
                  fillInterval: 10s
                  maxTokens: 100
                  tokensPerFill: 100
      statPrefix: self_inbound_dp_17777
name: self_inbound_dp_17777
trafficDirection: INBOUND
