pkg/plugins/policies/meshratelimit/plugin/v1alpha1/testdata/basic_listener_2.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17778
enableReusePort: true
filterChains:
- filters:
  - name: envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit
      statPrefix: tcp_rate_limit
      tokenBucket:
        fillInterval: 10s
        maxTokens: 100
        tokensPerFill: 100
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      cluster: self_inbound_dp_17778
      statPrefix: self_inbound_dp_17778
name: self_inbound_dp_17778
trafficDirection: INBOUND
