pkg/plugins/policies/meshratelimit/plugin/v1alpha1/testdata/gateway_basic_routes.golden.yaml
ignorePortInHostMatching: true
name: sample-gateway:HTTP:8080:*
requestHeadersToRemove:
- x-kuma-tags
validateClusters: false
virtualHosts:
- domains:
  - '*'
  name: '*'
  routes:
  - match:
      path: /
    route:
      clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      idleTimeout: 5s
      weightedClusters:
        clusters:
        - name: backend-26cb64fa4e85e7b7
          requestHeadersToAdd:
          - header:
              key: x-kuma-tags
              value: '&kuma.io/service=sample-gateway&'
          weight: 1
    typedPerFilterConfig:
      envoy.filters.http.local_ratelimit:
        '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
        filterEnabled:
          defaultValue:
            numerator: 100
          runtimeKey: local_rate_limit_enabled
        filterEnforced:
          defaultValue:
            numerator: 100
          runtimeKey: local_rate_limit_enforced
        responseHeadersToAdd:
        - header:
            key: x-kuma-rate-limit-header
            value: test-value
        - header:
            key: x-kuma-rate-limit
            value: other-value
        statPrefix: rate_limit
        status:
          code: 444
        tokenBucket:
          fillInterval: 10s
          maxTokens: 100
          tokensPerFill: 100
