pkg/plugins/policies/meshratelimit/plugin/v1alpha1/testdata/http_disabled.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17777
enableReusePort: true
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      routeConfig:
        name: self_inbound_dp_17777
        requestHeadersToRemove:
        - x-kuma-tags
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: self_inbound_dp_17777
          routes:
          - match:
              prefix: /
            route:
              cluster: self_inbound_dp_17777
              timeout: 0s
      statPrefix: self_inbound_dp_17777
name: self_inbound_dp_17777
trafficDirection: INBOUND
