pkg/plugins/policies/meshratelimit/plugin/v1alpha1/testdata/old_policy.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17777
<<<<<<< HEAD
enableReusePort: false
=======
enableReusePort: true
>>>>>>> 0f37c0f224 (fix(xds): add a feature flag to enable reuse ports (#16677))
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      routeConfig:
        name: inbound:backend
        requestHeadersToRemove:
        - x-kuma-tags
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: backend
          routes:
          - match:
              prefix: /
            route:
              cluster: backend
              timeout: 0s
            typedPerFilterConfig:
              envoy.filters.http.local_ratelimit:
                '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                filterEnabled:
                  defaultValue:
                    numerator: 100
                  runtimeKey: local_rate_limit_enabled
                filterEnforced:
                  defaultValue:
                    numerator: 100
                  runtimeKey: local_rate_limit_enforced
                statPrefix: rate_limit
                tokenBucket:
                  fillInterval: 14s
                  maxTokens: 100
                  tokensPerFill: 100
      statPrefix: "127_0_0_1_17777"
name: inbound:127.0.0.1:17777
trafficDirection: INBOUND
