pkg/plugins/policies/meshratelimit/plugin/v1alpha1/testdata/tcp_disabled.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17778
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      cluster: frontend
      statPrefix: "127_0_0_1_17778"
name: inbound:127.0.0.1:17778
trafficDirection: INBOUND
